<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:orientation="horizontal">

    <include
        layout="@layout/tool_bar_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/menu_registers"/>

    <Button
        android:id="@+id/btnRegisterCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/categories" />

    <Button
        android:id="@+id/btnRegisterManufacturer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/manufacturers" />
</LinearLayout>