<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <include
        layout="@layout/tool_bar_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/menu_register_customer"/>

    <TextView
        android:id="@+id/txtViewNameCustomer"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        android:text="@string/name_custumer"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtTxtNameCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="text"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColorLink="@color/colorPrimary"
        android:textSize="24sp"
        android:theme="@style/EditTextTheme" />

    <TextView
        android:id="@+id/txtViewPriceCustomer"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        android:text="@string/document_customer"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtTxtPriceCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColorLink="@color/colorPrimary"
        android:textSize="24sp"
        android:theme="@style/EditTextTheme" />

</LinearLayout>